listar capacidades nombre